# esp32p4-smart-irrigation

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  partitions.csv  sdkconfig.defaults
components/alarm_manager/: CMakeLists.txt  alarm_manager.c
components/alarm_manager/include/: alarm_manager.h
components/cloud_manager/: CMakeLists.txt  cloud_manager.c
components/cloud_manager/include/: cloud_manager.h
components/device_registry/: CMakeLists.txt  device_registry.c
components/device_registry/include/: device_registry.h
components/display_manager/: CMakeLists.txt
components/display_manager/include/: display_manager.h
components/event_recorder/: CMakeLists.txt
components/history_archive/: CMakeLists.txt  history_archive.c
components/irrigation_scheduler/: CMakeLists.txt  irrigation_scheduler.c  irrigation_store.c
components/smart_irrigation_ui/: CMakeLists.txt  idf_component.yml
components/smart_irrigation_ui/include/: ui_alarm.h  ui_alarm_records.h  ui_common.h  ui_display.h  ui_keyboard.h  ui_log_records.h  ui_network.h  ui_numpad.h  ui_startup.h  ui_wifi.h
components/smart_irrigation_ui/src/: my_fontbd_16.c  ui_alarm.c  ui_alarm_records.c  ui_device.c  ui_display.c  ui_home.c  ui_keyboard.c  ui_log.c  ui_log_records.c  ui_main.c  ui_maintenance.c  ui_network.c  ui_numpad.c  ui_program.c  ui_settings.c  ui_startup.c  ui_wifi.c
components/wifi_manager/: CMakeLists.txt  idf_component.yml
components/zigbee_bridge/: CMakeLists.txt  zigbee_bridge.c
docs/: dropdown_font_chars.txt
main/: CMakeLists.txt  main.c
(+8 files in other folders)
